--- a/wp-content/themes/hollyhill/assets/sass/_home.scss
+++ b/wp-content/themes/hollyhill/assets/sass/_home.scss
@@ -15,7 +15,7 @@
     position: relative;
     text-align:left;
     height:400px;
-    z-index:999;
+    z-index:98;
     //display: inline-block;
     @include breakpoint(small) {
       z-index:0;
